a1/brendan_gordon/TEST_PROGRAMS/invalidtype/maxim_gorshkov/prog3.min
# Using an incorrect type with a variable

var x : int;

x = 3.0;
